compiler/tests/success/x86-64/vector_arguments.jazz
export
fn xor256(reg u256 a b) -> reg u256 {
reg u256 r;

r = a ^ b;

return r;
}