compiler/tests/fail/param_expansion/x86-64/array_too_large_ret.jazz
export
fn main(reg u64[0x10000000000000000] a) -> reg u64[0x10000000000000000] {
    return a;
}
